; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/stm/extr_policy.c_stp_policy_node_get_ranges.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/stm/extr_policy.c_stp_policy_node_get_ranges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stp_policy_node = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stp_policy_node_get_ranges(%struct.stp_policy_node* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.stp_policy_node*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.stp_policy_node* %0, %struct.stp_policy_node** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load %struct.stp_policy_node*, %struct.stp_policy_node** %6, align 8
  %12 = getelementptr inbounds %struct.stp_policy_node, %struct.stp_policy_node* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %7, align 8
  store i32 %13, i32* %14, align 4
  %15 = load %struct.stp_policy_node*, %struct.stp_policy_node** %6, align 8
  %16 = getelementptr inbounds %struct.stp_policy_node, %struct.stp_policy_node* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %8, align 8
  store i32 %17, i32* %18, align 4
  %19 = load %struct.stp_policy_node*, %struct.stp_policy_node** %6, align 8
  %20 = getelementptr inbounds %struct.stp_policy_node, %struct.stp_policy_node* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %9, align 8
  store i32 %21, i32* %22, align 4
  %23 = load %struct.stp_policy_node*, %struct.stp_policy_node** %6, align 8
  %24 = getelementptr inbounds %struct.stp_policy_node, %struct.stp_policy_node* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %10, align 8
  store i32 %25, i32* %26, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
